# filtering-methods

./: README.md  _.py  config.py  main.py  pyproject.toml  variant.xlsx
excel/: exporter.py  loader.py
filters/: kalman.py  wiener.py
metrics/: acf.py  noise_variation.py  snr.py
models/: nonlinear.py  process.py
output/: data.xlsx
views/: plots.py
